@@ -8,8 +8,8 @@ group = 'com.github.istin.dmtools'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '23'
-    targetCompatibility = '23'
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 repositories {
@@ -122,13 +122,11 @@ configurations.all {
 tasks.withType(Test) {
     useJUnitPlatform()
     enabled = true  // Enable tests
-    jvmArgs += "-Dnet.bytebuddy.experimental=true"  // Add support for Java 23
 }
 
 test {
     useJUnitPlatform()
     enabled = true  // Enable tests
-    jvmArgs += "-Dnet.bytebuddy.experimental=true"  // Add support for Java 23
     testLogging {
         events "passed", "skipped", "failed", "standardOut", "standardError"
         exceptionFormat "full"
